<?xml version="1.0"?>
<package format="2">
    <name>mv_camera_driver</name>
    <version>1.0.0</version>
    <description>Common module for odape.</description>
    <maintainer email="xxdsox@gmail.com">Yusu Pan</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <exec_depend>roscpp</exec_depend>

    <build_depend>std_msgs</build_depend>
    <exec_depend>std_msgs</exec_depend>

    <build_depend>sensor_msgs</build_depend>
    <exec_depend>sensor_msgs</exec_depend>
    
    <build_depend>cv_bridge</build_depend>
    <exec_depend>cv_bridge</exec_depend>
</package>